added rest of breakfast menu

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <ul class="dropdown-menu nav-dropdown" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="menus.html">All Menus</a><hr></li>
               <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
-              <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips, & Jackets</a></li>
-              <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps, & Roasts</a></li>
+              <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
+              <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps & Roasts</a></li>
               <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salads</a></li>
             </ul>
           </li>
