--- a/breakfasts.html
+++ b/breakfasts.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="styles.css" rel="stylesheet">
-    <link rel="icon" href="images/sandwich_logo.png">
-    <title>Breakfasts</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="styles.css" rel="stylesheet">
+  <link rel="icon" href="images/sandwich_logo.png">
+  <title>Breakfasts</title>
 </head>
 
 
@@ -15,7 +17,8 @@
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Loafers Sandwhich Bar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse " id="navbarNav">
@@ -24,14 +27,17 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle active" aria-current="page" href="menu.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle active" aria-current="page" href="menu.html" id="navbarDropdownMenuLink"
+              role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Menus
             </a>
             <ul class="dropdown-menu nav-dropdown" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="menus.html">All Menus</a><hr></li>
+              <li><a class="dropdown-item" href="menus.html">All Menus</a>
+                <hr>
+              </li>
               <li><a class="dropdown-item dropdown-active" href="breakfasts.html">Breakfast Menu</a></li>
-              <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips, & Jackets</a></li>
-              <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps, & Roasts</a></li>
+              <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
+              <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps & Roasts</a></li>
               <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salads</a></li>
             </ul>
           </li>
@@ -58,7 +64,7 @@
 
 
   <div class="container menu-items">
-    <div class="row">
+    <div class="row py-1">
       <div class="col">
         <h4>Bacon</h4>
       </div>
@@ -66,7 +72,7 @@
         <h4>£3.60</h4>
       </div>
     </div>
-    <div class="row">
+    <div class="row py-1">
       <div class="col">
         <h4>Sausage</h4>
       </div>
@@ -74,7 +80,7 @@
         <h4>£3.60</h4>
       </div>
     </div>
-    <div class="row">
+    <div class="row py-1">
       <div class="col">
         <h4>Bacon & Sausage</h4>
       </div>
@@ -82,7 +88,7 @@
         <h4>£4.50</h4>
       </div>
     </div>
-    <div class="row">
+    <div class="row py-1">
       <div class="col">
         <h4>Bacon & Egg</h4>
       </div>
@@ -215,31 +221,31 @@
         <h4>Veggie Sausage</h4>
       </div>
       <div class="col">
-        £3.60</h4>
+        <h4>£3.60</h4>
       </div>
     </div>
     <div class="row">
       <div class="col">
-        Veggie Sausage & Egg</h4>
+        <h4>Veggie Sausage & Egg</h4>
       </div>
       <div class="col">
-        £4.05</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        Double Egg & Mushrooms</h4>
-      </div>
-      <div class="col">
-        £4.70</h4>
+        <h4>£4.05</h4>
       </div>
     </div>
     <div class="row">
       <div class="col">
-        Veggie Sausage, Egg & hashbrowns</h4>
+        <h4>Double Egg & Mushrooms</h4>
       </div>
       <div class="col">
-        £4.70
+        <h4>£4.70</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4>Veggie Sausage, Egg & hashbrowns</h4>
+      </div>
+      <div class="col">
+        <h4>£4.70</h4>
       </div>
     </div>
     <div class="row">
@@ -260,25 +266,101 @@
     </div>
     <div class="row">
       <div class="col">
-        <h4>>Hashbrown & Fried Tomatoes</h4>
+        <h4>Hashbrown & Fried Tomatoes</h4>
       </div>
       <div class="col">
-      <h4>£5.60</h4>
+        <h4>£5.60</h4>
       </div>
     </div>
-    
 
+    <h2 class="text-center m-0">Extras</h2>
+    <div class="row">
+      <div class="col">
+        <h4>Bacon per rasher</h4>
+      </div>
+      <div class="col">
+        <h4>£0.80</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4>Black Pudding</h4>
+      </div>
+      <div class="col">
+        <h4>£0.80</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4>Hashbrowns</h4>
+      </div>
+      <div class="col">
+        <h4>£0.80</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4>Fried Egg</h4>
+      </div>
+      <div class="col">
+        <h4>£0.80</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4>Fried Tomatoes</h4>
+      </div>
+      <div class="col">
+        <h4>£0.60</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4>mushrooms</h4>
+      </div>
+      <div class="col">
+        <h4>£0.80</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4>Onions</h4>
+      </div>
+      <div class="col">
+        <h4>£0.30</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4>Sausage</h4>
+      </div>
+      <div class="col">
+        <h4>£1.40</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4>Scrambled Eggs</h4>
+      </div>
+      <div class="col">
+        <h4>£1.40</h4>
+      </div>
+    </div>
+  </div>
 </body>
 
 
 <footer class="w-100 fixed-bottom">
   <div class="p-3">
-    <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png" alt="Facebook Logo" width="25" height="25"> Facebook</a>
-    <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png" alt="Twitter Logo" width="25" height="25"> Twitter</a>
+    <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png"
+        alt="Facebook Logo" width="25" height="25"> Facebook</a>
+    <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png"
+        alt="Twitter Logo" width="25" height="25"> Twitter</a>
   </div>
 </footer>
 
 <script src="scripts/scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </html>
