--- a/burgers_chips_jackets.html
+++ b/burgers_chips_jackets.html
@@ -6,96 +6,425 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet">
-    <title>Home</title>
+    <link rel="icon" href="images/sandwich_logo.png">
+    <title>Burgers, Chips & Jackets</title>
 </head>
 
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Loafers Sandwhich Bar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse " id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="menu.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Menus
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
-                  <li><a class="dropdown-item" href="burgers_chips_roasts.html">Burgers, Chips, & Jackets</a></li>
-                  <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps, & Roasts</a></li>
-                  <li><a class="dropdown-item" href="cold_fillings.html">Cold Fillings & Salads</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="catering.html">Catering</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact_and_order.html">Contact</a>
-              </li>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Loafers Sandwhich Bar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse " id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle active" aria-current="page" href="menu.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Menus
+            </a>
+            <ul class="dropdown-menu nav-dropdown" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item" href="menus.html">All Menus</a><hr></li>
+              <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
+              <li><a class="dropdown-item dropdown-active" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
+              <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps & Roasts</a></li>
+              <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salads</a></li>
             </ul>
-          </div>
-        </div>
-      </nav>
-
-      <div class="row p-0">
-        <img src="images/banner.jpg" class="d-block w-100 banner" alt="...">
-      </div>
-    
-
-
-
-
-    <div class="container-fluid-s p-0">
-      <div class="row p-0 itemMenu">
-        <div class="col-5">
-          <h4>1/4 Beef Burger</h4>
-          <h4>1/4 Cheese Burger</h4>
-          <h4>1/2 Beef Burger</h4>
-          <h4>1/2 Cheese Burger</h4>
-          <h4>1/4 Double Bacon Cheese</h4>
-          <h4>1/2 Double Bacon Cheese</h4> 
-          <h4>Delux Chicken Burger</h4>
-          <h4>Double Delux Chicken Burger</h4>
-          <h4>Veggie Bean Burger</h4>
-          <h4>Loafer Burger - 1/2 Cheese, Bacon, Onion & Fried Egg</h4>
-          <h4>Mini Loafer Burger - 1/4 Cheese, Bacon, Onion & Fried Egg</h4>
-          <h4>Chicken Loafer Burger - Chicken Burger, Cheese, Bacon, Onion & Fried Egg</h4>
-          <h4>1/4 Blue Cheese Burger</h4>
-          <h4>1/2 Blue Cheese Burger</h4>
-          <h4>1/4 Chilli Burger</h4>
-          <h4>1/2 Chilli Burger</h4>
-        </div>
-        <div class="col-5">
-          <h4>£3.60</h4>
-          <h4>£4.10</h4>
-          <h4>£4.70</h4>
-          <h4>£5.20</h4>
-          <h4>£5.20</h4>
-          <h4>£6.20</h4>
-          <h4>£4.20</h4>
-          <h4>£5.70</h4>
-          <h4>£4.10</h4>
-          <h4><br>£6.40</h4>
-          <h4><br>£5.20</h4>
-          <h4><br>£5.70</h4>
-          <h4>£4.10</h4>
-          <h4>£5.40</h4>
-          <h4>£4.30</h4>
-          <h4>£5.40</h4>
-        </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="catering.html">Catering</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
       </div>
     </div>
+  </nav>
+
+  <div class="row p-0 m-0">
+    <img src="images/banner.jpg" class="w-100 banner" alt="Banner">
+    <div class="relative-absolute-position">
+      <p class="w-100 title-background"></p>
+      <h1 class="title">Breakfast Selection</h1>
+    </div>
+  </div>
+
+
+
+
+  <div class="container menu-items">
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h4></h4>
+      </div>
+      <div class="col">
+        <h4></h4>
+      </div>
+    </div>
+
+
+    
+  </div>
 </body>
 
 
+<footer class="w-100 fixed-bottom">
+  <div class="p-3">
+    <a href="https://facebook.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/facebook.png" alt="Facebook Logo" width="25" height="25"> Facebook</a>
+    <a href="https://twitter.com/loaferstaunton" target="_blank"><img class="footerImage" src="Images/twitter.png" alt="Twitter Logo" width="25" height="25"> Twitter</a>
+  </div>
+</footer>
 
 <script src="scripts/scripts.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
