--- a/catering.html
+++ b/catering.html
@@ -36,8 +36,8 @@
                 <hr>
               </li>
               <li><a class="dropdown-item" href="breakfasts.html">Breakfast Menu</a></li>
-              <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips, & Jackets</a></li>
-              <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps, & Roasts</a></li>
+              <li><a class="dropdown-item" href="burgers_chips_jackets.html">Burgers, Chips & Jackets</a></li>
+              <li><a class="dropdown-item" href="paninis_wraps_roasts.html">Paninis, Wraps & Roasts</a></li>
               <li><a class="dropdown-item" href="cold_fillings_salads.html">Cold Fillings & Salads</a></li>
             </ul>
           </li>
